@@ -1,3 +1,4 @@
+[2018-06-09 18:07:07 +0200]  More fixes in advanced dialogs                                             karasu      {0a70a02f}
 [2018-06-09 17:16:48 +0200]  Missing param                                                              karasu      {3cdb8f25}
 [2018-06-09 16:59:34 +0200]  Fix typos                                                                  karasu      {6eb0a770}
 [2018-06-09 16:50:15 +0200]  Remove unused imports                                                      karasu      {2195c284}
